adds integration test